Почав робити 4 дз

--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
 				
 				<ul class="site-contacts list">
 					<li>
-						<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+						<a href="mailto:info@devstudio.com" class="link">
+							<svg class="link-icon" width="16" height="16" >
+								<use href="./images/symbol-defs.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
 					</li>
 					<li>
-						<a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+						<a href="tel:+380961111111" class="link">
+							<svg class="link-icon" width="16" height="16" >
+								<use href="./images/symbol-defs.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -56,18 +66,38 @@
 				<h2 class="section-title visually-hidden">Особливості</h2>
 				<ul class="feature-list list">
 					<li class="feature-item">
+						<div class="background-svg">
+							<svg width="70" height="70">
+								<use href="./images/symbol-defs.svg#icon-antenna"></use>
+							</svg>
+						</div>
 						<h3 class="feature-title">Увага до деталей</h3>
 						<p class="feature-paragraph">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 					</li>
 					<li class="feature-item">
+						<div class="background-svg">
+							<svg width="70" height="70">
+								<use href="./images/symbol-defs.svg#icon-clock"></use>
+							</svg>
+						</div>
 						<h3 class="feature-title">Пунктуальність</h3>
 						<p class="feature-paragraph">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 					</li>
 					<li class="feature-item">
+						<div class="background-svg">
+							<svg width="70" height="70">
+								<use href="./images/symbol-defs.svg#icon-diagram"></use>
+							</svg>
+						</div>
 						<h3 class="feature-title">Планування</h3>
 						<p class="feature-paragraph">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
 					<li class="feature-item">
+						<div class="background-svg">
+							<svg width="70" height="70">
+								<use href="./images/symbol-defs.svg#icon-astronaut"></use>
+							</svg>
+						</div>
 						<h3 class="feature-title">Сучасні технології</h3>
 						<p class="feature-paragraph">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 					</li>
@@ -100,21 +130,191 @@
 						<img class="team-img" src="./images/people1.jpg" alt="Учасник Ігор Дем'яненко" width="270">
 						<h3 class="team-title">Ігор Дем'яненко</h3>
 						<p lang="en" class="team-paragraph">Product Designer</p>
+						<ul class="team-network list">
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-instagram"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-twitter"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-facebook"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+									</svg>
+								</div>
+							</li>
+						</ul>
 					</li>
 					<li class="team-item">
 						<img class="team-img" src="./images/people2.jpg" alt="Учасниця Ольга Рєпіна" width="270">
 						<h3 class="team-title">Ольга Рєпіна</h3>
 						<p lang="en" class="team-paragraph">Frontend Developer</p>
+						<ul class="team-network list">
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-instagram"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-twitter"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-facebook"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+									</svg>
+								</div>
+							</li>
+						</ul>
 					</li>
 					<li class="team-item">
 						<img class="team-img" src="./images/people3.jpg" alt="Учасник Микола Тарасов" width="270">
 						<h3 class="team-title">Микола Тарасов</h3>
 						<p lang="en" class="team-paragraph">Marketing</p>
+						<ul class="team-network list">
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-instagram"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-twitter"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-facebook"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+									</svg>
+								</div>
+							</li>
+						</ul>
 					</li>
 					<li class="team-item">
 						<img class="team-img" src="./images/people4.jpg" alt="Учасник Михайло Єрмаков" width="270">
 						<h3 class="team-title">Михайло Єрмаков</h3>
 						<p lang="en" class="team-paragraph">UI Designer</p>
+						<ul class="team-network list">
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-instagram"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-twitter"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-facebook"></use>
+									</svg>
+								</div>
+							</li>
+							<li class="network-item">
+								<div class="network">
+									<svg width="20" height="20">
+										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+									</svg>
+								</div>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="section clients">
+			<div class="container">
+				<h2 class="section-title">Постійні клієнти</h2>
+				<ul class="clients-card list">
+					<li>
+						<div class="background-clients">
+						<svg width="106" height="60">
+								<use href="./images/symbol-defs.svg#icon-clients1"></use>
+							</svg>
+						</div>
+					</li>
+					<li>
+						<div class="background-clients">
+						<svg width="106" height="60">
+								<use href="./images/symbol-defs.svg#icon-clients2"></use>
+							</svg>
+						</div>
+					</li>
+					<li>
+						<div class="background-clients">
+						<svg width="106" height="60">
+								<use href="./images/symbol-defs.svg#icon-clients3"></use>
+							</svg>
+						</div>
+					</li>
+					<li>
+						<div class="background-clients">
+						<svg width="106" height="60">
+								<use href="./images/symbol-defs.svg#icon-clients4"></use>
+							</svg>
+						</div>
+					</li>
+					<li>
+						<div class="background-clients">
+						<svg width="106" height="60">
+								<use href="./images/symbol-defs.svg#icon-clients5"></use>
+							</svg>
+						</div>
+					</li>
+					<li>
+						<div class="background-clients">
+						<svg width="106" height="60">
+								<use href="./images/symbol-defs.svg#icon-clients6"></use>
+							</svg>
+						</div>
 					</li>
 				</ul>
 			</div>
