--- a/index.html
+++ b/index.html
@@ -277,42 +277,42 @@
 					<li>
 						<div class="background-clients">
 						<svg width="106" height="60">
-								<use href="./images/symbol-defs.svg#icon-clients1"></use>
+								<use href="./images/symbol-defs.svg#icon-logo1"></use>
 							</svg>
 						</div>
 					</li>
 					<li>
 						<div class="background-clients">
 						<svg width="106" height="60">
-								<use href="./images/symbol-defs.svg#icon-clients2"></use>
+								<use href="./images/symbol-defs.svg#icon-logo2"></use>
 							</svg>
 						</div>
 					</li>
 					<li>
 						<div class="background-clients">
 						<svg width="106" height="60">
-								<use href="./images/symbol-defs.svg#icon-clients3"></use>
+								<use href="./images/symbol-defs.svg#icon-logo3"></use>
 							</svg>
 						</div>
 					</li>
 					<li>
 						<div class="background-clients">
 						<svg width="106" height="60">
-								<use href="./images/symbol-defs.svg#icon-clients4"></use>
+								<use href="./images/symbol-defs.svg#icon-logo4"></use>
 							</svg>
 						</div>
 					</li>
 					<li>
 						<div class="background-clients">
 						<svg width="106" height="60">
-								<use href="./images/symbol-defs.svg#icon-clients5"></use>
+								<use href="./images/symbol-defs.svg#icon-logo5"></use>
 							</svg>
 						</div>
 					</li>
 					<li>
 						<div class="background-clients">
 						<svg width="106" height="60">
-								<use href="./images/symbol-defs.svg#icon-clients6"></use>
+								<use href="./images/symbol-defs.svg#icon-logo6"></use>
 							</svg>
 						</div>
 					</li>
@@ -324,21 +324,59 @@
 	<!-- Подвал -->
 	<footer class="floor">
 		<div class="container">
-			<a href="" class="logo"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
-		
-			<address class="address">
-				<ul class="address-list list">
-					<li class="address-item">
-						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="address-street" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-					</li>
-					<li class="address-item">
-						<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> <br>
-					</li>
-					<li class="address-item">
-						<a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-					</li>
-				</ul>
-			</address>
+			<div class="footer-arrangement">
+				<div class="side-left">
+					<a href="./index.html" class="logo"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
+			
+					<address class="address">
+						<ul class="address-list list">
+							<li class="address-item">
+								<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="address-street" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+							</li>
+							<li class="address-item">
+								<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> <br>
+							</li>
+							<li class="address-item">
+								<a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+			
+				<div class="side-centre">
+					<h2 class="footer-title">Приєднуйтесь</h2>
+					<ul class="footer-list-network list">
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-instagram"></use>
+								</svg>
+							</div>
+						</li>
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-twitter"></use>
+								</svg>
+							</div>
+						</li>
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-facebook"></use>
+								</svg>
+							</div>
+						</li>
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+								</svg>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</footer>
 </body>
