--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,20 @@
 				
 				<ul class="site-contacts list">
 					<li>
-						<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+						<a href="mailto:info@devstudio.com" class="link">
+							<svg class="link-icon" width="16" height="16" >
+								<use href="./images/symbol-defs.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
 					</li>
 					<li>
-						<a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+						<a href="tel:+380961111111" class="link">
+							<svg class="link-icon" width="16" height="16" >
+								<use href="./images/symbol-defs.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -155,21 +165,59 @@
 
 	<footer class="floor">
 		<div class="container">
-			<a href="./portfolio.html" class="logo"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
-		
-			<address class="address">
-				<ul class="address-list list">
-					<li class="address-item">
-						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="address-street" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-					</li>
-					<li class="address-item">
-						<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> <br>
-					</li>
-					<li class="address-item">
-						<a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-					</li>
-				</ul>
-			</address>
+			<div class="footer-arrangement">
+				<div class="side-left">
+					<a href="./portfolio.html" class="logo"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
+			
+					<address class="address">
+						<ul class="address-list list">
+							<li class="address-item">
+								<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="address-street" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+							</li>
+							<li class="address-item">
+								<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> <br>
+							</li>
+							<li class="address-item">
+								<a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+			
+				<div class="side-centre">
+					<h2 class="footer-title">Приєднуйтесь</h2>
+					<ul class="footer-list-network list">
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-instagram"></use>
+								</svg>
+							</div>
+						</li>
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-twitter"></use>
+								</svg>
+							</div>
+						</li>
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-facebook"></use>
+								</svg>
+							</div>
+						</li>
+						<li class="footer-network-item">
+							<div class="footer-network">
+								<svg width="20" height="20">
+									<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+								</svg>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</footer>
 </body>
