--- a/index.html
+++ b/index.html
@@ -132,32 +132,32 @@
 						<p lang="en" class="team-paragraph">Product Designer</p>
 						<ul class="team-network list">
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-instagram"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-twitter"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-facebook"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 						</ul>
 					</li>
@@ -167,32 +167,32 @@
 						<p lang="en" class="team-paragraph">Frontend Developer</p>
 						<ul class="team-network list">
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-instagram"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-twitter"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-facebook"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 						</ul>
 					</li>
@@ -202,32 +202,32 @@
 						<p lang="en" class="team-paragraph">Marketing</p>
 						<ul class="team-network list">
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-instagram"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-twitter"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-facebook"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 						</ul>
 					</li>
@@ -237,32 +237,32 @@
 						<p lang="en" class="team-paragraph">UI Designer</p>
 						<ul class="team-network list">
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-instagram"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-twitter"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-facebook"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 							<li class="network-item">
-								<div class="network">
+								<a href="" class="network">
 									<svg width="20" height="20">
 										<use href="./images/symbol-defs.svg#icon-linkedin"></use>
 									</svg>
-								</div>
+								</a>
 							</li>
 						</ul>
 					</li>
@@ -274,46 +274,47 @@
 			<div class="container">
 				<h2 class="section-title">Постійні клієнти</h2>
 				<ul class="clients-card list">
-					<li>
-						<div class="background-clients">
-						<svg width="106" height="60">
+					<li class="clients-card-item">
+						<a href="" class="background-clients">
+							<svg width="106" height="60">
 								<use href="./images/symbol-defs.svg#icon-logo1"></use>
 							</svg>
-						</div>
+						</a>
 					</li>
-					<li>
-						<div class="background-clients">
-						<svg width="106" height="60">
+					<li class="clients-card-item">
+						<a href="" class="background-clients">
+							<svg width="106" height="60">
 								<use href="./images/symbol-defs.svg#icon-logo2"></use>
 							</svg>
-						</div>
+						</a>
 					</li>
-					<li>
-						<div class="background-clients">
-						<svg width="106" height="60">
+					<li class="clients-card-item">
+						<a href="" class="background-clients">
+							<svg width="106" height="60">
 								<use href="./images/symbol-defs.svg#icon-logo3"></use>
 							</svg>
-						</div>
+						</a>
 					</li>
-					<li>
-						<div class="background-clients">
-						<svg width="106" height="60">
+					<li class="clients-card-item">
+						<a href="" class="background-clients">
+							<svg width="106" height="60">
 								<use href="./images/symbol-defs.svg#icon-logo4"></use>
 							</svg>
-						</div>
+						</a>
 					</li>
-					<li>
-						<div class="background-clients">
-						<svg width="106" height="60">
+					<li class="clients-card-item">
+						<a href="" class="background-clients">
+							<svg width="106" height="60">
 								<use href="./images/symbol-defs.svg#icon-logo5"></use>
 							</svg>
-						</div>
+						</a>
 					</li>
-					<li>
-						<div class="background-clients">
-						<svg width="106" height="60">
+					<li class="clients-card-item">
+						<a href="" class="background-clients">
+							<svg width="106" height="60">
 								<use href="./images/symbol-defs.svg#icon-logo6"></use>
 							</svg>
+						</a>
 						</div>
 					</li>
 				</ul>
@@ -347,32 +348,32 @@
 					<h2 class="footer-title">Приєднуйтесь</h2>
 					<ul class="footer-list-network list">
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-instagram"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-twitter"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-facebook"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-linkedin"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 					</ul>
 				</div>
