--- a/portfolio.html
+++ b/portfolio.html
@@ -188,32 +188,32 @@
 					<h2 class="footer-title">Приєднуйтесь</h2>
 					<ul class="footer-list-network list">
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-instagram"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-twitter"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-facebook"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 						<li class="footer-network-item">
-							<div class="footer-network">
+							<a href="" class="footer-network">
 								<svg width="20" height="20">
 									<use href="./images/symbol-defs.svg#icon-linkedin"></use>
 								</svg>
-							</div>
+							</a>
 						</li>
 					</ul>
 				</div>
