Змінив код картинки

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 	<!-- Главная страница сайта -->
 	<main>
 		<section class="hero">
-			<h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
-			<button type="button" class="hero-button">Замовити послугу</button>
+			<div class="thumb">
+				<h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+				<button type="button" class="hero-button">Замовити послугу</button>
+			</div>
 		</section>
 	
 		<section class="section">
